--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "registration_system",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js" 
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
