--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/checkbox": "^0.5.3",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -16,10 +17,12 @@
     "@react-navigation/stack": "^5.9.0",
     "axion": "^0.1.0",
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
     "expo": "~38.0.8",
     "expo-linear-gradient": "~8.2.1",
     "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.29.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
