--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "expo-linear-gradient": "~8.2.1",
     "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.29.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
