--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "test": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^13.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
