--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,12 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.3.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.11",
     "nodemailer-express-handlebars": "^4.0.0",
     "path": "^0.12.7"
