Modificações realizadas: - Tokens do expo sendo cadastrados no banco. - Arquivos referentes ao token do expo criados

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,8 +20,11 @@
     "date-fns": "^2.16.1",
     "expo": "~38.0.8",
     "expo-calendar": "~8.2.2",
+    "expo-constants": "~9.1.1",
     "expo-linear-gradient": "~8.2.1",
-    "expo-splash-screen": "^0.3.1",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
+    "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.29.0",
     "react": "~16.11.0",
