--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
